--- a/index.pug
+++ b/index.pug
@@ -5,5 +5,16 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
+        link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
         link(rel="stylesheet", href="css/style.css")
     body
+        section.nav-bar
+            container
+                .logo
+                    img(src="img/logo.png", alt="")
+                nav
+                    nav-link
+                    nav-link
+                    nav-link
+                    nav-link
+                    nav-link
