--- a/index.pug
+++ b/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
         link(rel="stylesheet", href="css/style.css")
     body
         section.nav-bar
-            container
+            .container
                 .logo
                     img(src="img/logo.png", alt="")
                 nav
