--- a/index.pug
+++ b/index.pug
@@ -14,7 +14,12 @@ html(lang="en")
                     img(src="img/logo.png", alt="")
                 nav
                     nav-link
+                        p home
                     nav-link
+                        p about
                     nav-link
+                        p steps
                     nav-link
+                        p sing-in
                     nav-link
+                        p footer
