--- a/index.pug
+++ b/index.pug
@@ -13,13 +13,13 @@ html(lang="en")
                 .logo
                     img(src="img/logo.png", alt="")
                 nav
-                    nav-link
+                    .nav-link
                         p home
-                    nav-link
+                    .nav-link
                         p about
-                    nav-link
+                    .nav-link
                         p steps
-                    nav-link
+                    .nav-link
                         p sing-in
-                    nav-link
+                    .nav-link
                         p footer
