--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,34 @@
   box-sizing: border-box;
   font-family: 'Roboto Condensed', sans-serif;
 }
+.nav-bar {
+  background: #000;
+  position: fixed;
+  width: 100%;
+  padding: 1rem;
+}
+.nav-bar .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-bar .container .logo img {
+  height: 60px;
+}
+.nav-bar .container nav {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+.nav-bar .container nav .menu-link {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  text-transform: uppercase;
+  color: #fff;
+  line-height: 0;
+  height: 100%;
+}
+.nav-bar .container nav .link-active {
+  border-bottom: 1px solid #fff;
+}
