--- a/index.pug
+++ b/index.pug
@@ -7,19 +7,15 @@ html(lang="en")
         title Document
         link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
         link(rel="stylesheet", href="css/style.css")
+        script(src="https://code.jquery.com/jquery-3.3.1.min.js" defer)
     body
         section.nav-bar
             .container
                 .logo
                     img(src="img/logo.png", alt="")
                 nav
-                    .nav-link
-                        p home
-                    .nav-link
-                        p about
-                    .nav-link
-                        p steps
-                    .nav-link
-                        p sing-in
-                    .nav-link
-                        p footer
+                    .menu-link menu
+                    .menu-link about
+                    .menu-link steps
+                    .menu-link sing-in
+                    .menu-link footer
