--- a/style.styl
+++ b/style.styl
@@ -5,9 +5,28 @@
     box-sizing: border-box
     font-family: 'Roboto Condensed', sans-serif
 .nav-bar
+    background: black
+    position: fixed
+    width: 100%
+    padding: 1rem
     .container
+        display: flex
+        justify-content: space-between
+        align-items: center
         .logo
             img
+                height: 60px
         nav
-            .nav-link
-                p
+            display: flex
+            align-items: center
+            height 100%
+            .menu-link
+                display: flex
+                align-items: center
+                padding: 1rem
+                text-transform: uppercase
+                color: #ffffff
+                line-height: 0
+                height 100%
+            .link-active
+                border-bottom: 1px solid white
