--- a/index.pug
+++ b/index.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
+        link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.7.2/css/all.css")
         link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
         link(rel="stylesheet", href="css/style.css")
         script(src="https://code.jquery.com/jquery-3.3.1.min.js" defer)
@@ -19,3 +20,19 @@ html(lang="en")
                     .menu-link steps
                     .menu-link sing-in
                     .menu-link footer
+        section.first
+            .container
+                .left
+                    .laptop
+                        img(src="img/laptop.png", alt="")
+                        h2 BITCOIN IS MAKING PEOPLE RICH
+                        p And you can Become The Next Millionaire...
+                        button start now
+                .right
+                    .form-wrap
+                        form(action="")
+                            .input-wrap
+                                input(type="text")
+                            .input-wrap
+                                input(type="text")
+        section.second
