--- a/index.pug
+++ b/index.pug
@@ -30,6 +30,7 @@ html(lang="en")
                         button start now
                 .right
                     .form-wrap
+                        h2 Create a FREE account and start earning NOW
                         form(action="")
                             .input-wrap
                                 input(type="text")
