--- a/style.styl
+++ b/style.styl
@@ -31,7 +31,7 @@
             .link-active
                 border-bottom: 1px solid white
 .first
-    background: url(../img/bg1.jpg) no-repeat
+    background: url(../img/bg.gif) no-repeat
     background-color: #000000
     background-size: cover
     background-position: center center
@@ -45,10 +45,11 @@
             position: relative
             display: flex
             align-items: center
-            width: 1000px
+            width: 900px
             height: 100%
             .laptop
-                width: 1000px
+                background-size: cover
+                width: 900px
                 height 100%
                 overflow: hidden
                 display: flex
@@ -88,7 +89,7 @@
                         width:250px
                         height:50px
                         margin:10px 0
-                        cursor:pointer
+                        cursor: pointer
                         color:#fff
                         text-transform:uppercase
                         font-size:1.5rem
@@ -100,7 +101,28 @@
                         &:hover
                             background-position: left
         .right
+            display: flex
+            align-items: center
+            justify-content: center;
             width: 320px
+            height: 100%
+            .form-wrap
+                width: 420px
+                height: 500px
+                background: #ffffff
+                h2
+                    text-align: center
+                form
+                    width: 100%
+                    padding: 1rem
+                    display: flex
+                    flex-direction: column
+                    align-items: center
+                    .input-wrap
+                        width: 100%
+                        input
+                            width: 100%
+                            margin: 1rem 0
 .second
     width: 100%
     height: 100vh
