--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
   font-family: 'Roboto Condensed', sans-serif;
 }
 .nav-bar {
-  background: rgba(0,0,0,0.314);
   position: fixed;
   width: 100%;
   padding: 1rem;
@@ -25,6 +24,7 @@
   height: 100%;
 }
 .nav-bar .container nav .menu-link {
+  font-size: 1.3rem;
   display: flex;
   align-items: center;
   padding: 1rem;
@@ -53,7 +53,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  width: 900px;
+  width: 700px;
   height: 100%;
 }
 .first .container .left .laptop {
@@ -76,8 +76,8 @@
   max-width: 720px;
   text-transform: uppercase;
   text-align: center;
-  font-size: 4.8rem;
-  line-height: 5.2rem;
+  font-size: 3.5rem;
+  line-height: 3.5rem;
   background-image: linear-gradient(to right top, #ff9200, #ffa841, #ffbd6c, #ffd195, #ffe4c0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -86,7 +86,7 @@
 .first .container .left .laptop p {
   width: 100%;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #fff;
   z-index: 10;
 }
@@ -108,29 +108,56 @@
   font-size: 1.5rem;
   font-weight: 400;
   transition: 1s;
-  margin-top: 50px;
+  margin-top: 20px;
   border: none;
   z-index: 10;
 }
 .first .container .left .laptop button:hover {
   background-position: left;
 }
+.first .container .left .laptop .arrow {
+  z-index: 10;
+  color: #fff;
+  font-size: 2rem;
+  position: relative;
+  top: -58px;
+  left: 150px;
+  animation-name: arrow;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+@-webkit-keyframes arrow {
+  0% {
+    left: 150px;
+  }
+  50% {
+    left: 170px;
+  }
+  100% {
+    left: 150px;
+  }
+}
 .first .container .right {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 320px;
+  width: 380px;
   height: 100%;
+  margin-left: 1rem;
 }
 .first .container .right .form-wrap {
-  width: 420px;
-  height: 500px;
+  width: 380px;
+  height: 445px;
   background: #fff;
 }
 .first .container .right .form-wrap h2 {
   text-align: center;
+  background: #ffa500;
+  padding: 2rem;
+  color: #fff;
 }
 .first .container .right .form-wrap form {
+  background-size: cover;
   width: 100%;
   padding: 1rem;
   display: flex;
@@ -142,7 +169,18 @@
 }
 .first .container .right .form-wrap form .input-wrap input {
   width: 100%;
+  padding: 0.6rem;
   margin: 1rem 0;
+}
+.first .container .right .form-wrap form button {
+  margin-top: 10px;
+  padding: 1rem 4rem;
+  background: #ffa500;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.5rem;
 }
 .second {
   width: 100%;
