--- a/index.pug
+++ b/index.pug
@@ -28,12 +28,19 @@ html(lang="en")
                         h2 BITCOIN IS MAKING PEOPLE RICH
                         p And you can Become The Next Millionaire...
                         button start now
+                        .arrow
+                            i(class="fas fa-angle-double-left")
+                            
                 .right
                     .form-wrap
-                        h2 Create a FREE account and start earning NOW
+                        h2 CHANGE YOUR LIFE TODAY!
                         form(action="")
                             .input-wrap
-                                input(type="text")
+                                input(type="text", placeholder="First name")
                             .input-wrap
-                                input(type="text")
+                                input(type="text", placeholder="Last name")
+                            .input-wrap
+                                input(type="emeil",placeholder="Emeil")
+                            button give me access now
+
         section.second
