--- a/index.pug
+++ b/index.pug
@@ -8,8 +8,15 @@ html(lang="en")
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.7.2/css/all.css")
         link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
         link(rel="stylesheet", href="css/style.css")
-        script(src="https://code.jquery.com/jquery-3.3.1.min.js" defer)
+        script(src="https://code.jquery.com/jquery-3.3.1.min.js", defer)
+        script(src="js/main.js", defer)
     body
+        .loader
+              .bitcoin
+                .block1
+                    img(src="https://i.ibb.co/vQGV7G5/bitcoin1.jpg", alt="")
+                .block4
+                    img(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStDDhqGD4J6acDA_7mkffA9SLyWONLjQ5MS3cM_QJSqbnLkUH3Mw", alt="")
         section.nav-bar
             .container
                 .logo
