--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,148 @@
   width: 100%;
   height: 100vh;
 }
+.loader {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  z-index: 11;
+}
+.loader .bitcoin {
+  width: 500px;
+  height: 500px;
+  background: #000;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader .bitcoin .block1,
+.loader .bitcoin .block2,
+.loader .bitcoin .block3,
+.loader .bitcoin .block4 {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader .bitcoin .block1 {
+  z-index: 10;
+}
+.loader .bitcoin .block1 img {
+  width: 140px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 51px 2px rgba(0,0,0,0.75);
+  overflow: hidden;
+  animation-name: bitcoin;
+  animation-duration: 150s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@-moz-keyframes bitcoin {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(1080deg);
+  }
+  100% {
+    transform: rotateZ(3060deg);
+  }
+}
+@-webkit-keyframes bitcoin {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(1080deg);
+  }
+  100% {
+    transform: rotateZ(3060deg);
+  }
+}
+@-o-keyframes bitcoin {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(1080deg);
+  }
+  100% {
+    transform: rotateZ(3060deg);
+  }
+}
+@keyframes bitcoin {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(1080deg);
+  }
+  100% {
+    transform: rotateZ(3060deg);
+  }
+}
+.loader .bitcoin .block4 {
+  z-index: 7;
+  width: 190px;
+  height: 190px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.loader .bitcoin .block4 img {
+  width: 200px;
+  animation-name: bitcoin4;
+  animation-duration: 5.1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@-moz-keyframes bitcoin4 {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(-180deg);
+  }
+  100% {
+    transform: rotateZ(-360deg);
+  }
+}
+@-webkit-keyframes bitcoin4 {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(-180deg);
+  }
+  100% {
+    transform: rotateZ(-360deg);
+  }
+}
+@-o-keyframes bitcoin4 {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(-180deg);
+  }
+  100% {
+    transform: rotateZ(-360deg);
+  }
+}
+@keyframes bitcoin4 {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(-180deg);
+  }
+  100% {
+    transform: rotateZ(-360deg);
+  }
+}
