--- a/index.pug
+++ b/index.pug
@@ -14,9 +14,9 @@ html(lang="en")
         .loader
               .bitcoin
                 .block1
-                    img(src="https://i.ibb.co/vQGV7G5/bitcoin1.jpg", alt="")
+                    img(src="img/bitcoin1.jpg", alt="")
                 .block4
-                    img(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStDDhqGD4J6acDA_7mkffA9SLyWONLjQ5MS3cM_QJSqbnLkUH3Mw", alt="")
+                    img(src="img/images.jpeg", alt="")
         section.nav-bar
             .container
                 .logo
