--- a/index.pug
+++ b/index.pug
@@ -37,7 +37,13 @@ html(lang="en")
                         button start now
                         .arrow
                             i(class="fas fa-angle-double-left")
-                            
+                    .count
+                        h2 warning
+                        p Due to extremely high media demand, we will close registration as of
+                        p
+                            span.data
+                            |  -HURRY!
+                            span.counter
                 .right
                     .form-wrap
                         h2 CHANGE YOUR LIFE TODAY!
