--- a/style.styl
+++ b/style.styl
@@ -45,13 +45,15 @@
         .left
             position: relative
             display: flex
+            flex-direction: column
+            justify-content: center
             align-items: center
             width: 700px
             height: 100%
             .laptop
                 background-size: cover
                 width: 900px
-                height 100%
+                height 500px
                 overflow: hidden
                 display: flex
                 flex-direction: column
@@ -62,7 +64,7 @@
                     width: 100%
                     position: absolute
                 h2
-                    width: 90%
+                    width: 70%
                     max-width: 720px
                     text-transform: uppercase
                     text-align: center
@@ -115,6 +117,17 @@
                         0%   {left:150px}
                         50%   {left:170px}
                         100% {left: 150px}
+            .count
+                text-align: center
+                h2
+                 color: orange
+                 font-size: 3rem
+                 text-transform: uppercase
+                 line-height: 2rem;
+                p
+                 color: #fff
+                 font-size: 1.2rem
+                 line-height: 1rem
         .right
             display: flex
             align-items: center
