--- a/style.styl
+++ b/style.styl
@@ -117,24 +117,29 @@
                         0%   {left:150px}
                         50%   {left:170px}
                         100% {left: 150px}
+        .right
+            position relative
+            display: flex
+            align-items: center
+            justify-content: center;
+            width: 380px
+            // height: 100%
+            margin-left: 1rem
             .count
-                text-align: center
+                position: absolute
+                top: -170px
+                text-align: left
+                background: #00000021
+                padding: 1rem;
                 h2
                  color: orange
-                 font-size: 3rem
+                 font-size: 2rem
                  text-transform: uppercase
                  line-height: 2rem;
                 p
                  color: #fff
                  font-size: 1.2rem
-                 line-height: 1rem
-        .right
-            display: flex
-            align-items: center
-            justify-content: center;
-            width: 380px
-            height: 100%
-            margin-left: 1rem
+                 line-height: 1.4rem
             .form-wrap
                 width: 380px
                 height: 445px
