--- a/index.pug
+++ b/index.pug
@@ -39,7 +39,7 @@ html(lang="en")
                             i(class="fas fa-angle-double-left")
                 .right
                     .count
-                        h2 warning
+                        h2 warning!
                         p Due to extremely high media demand, we will close registration as of
                         p
                             span.data
