--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
   border-bottom: 1px solid #fff;
 }
 .first {
-  background: url("../img/bg.gif") no-repeat;
+  background: url("../img/bg1.jpg") no-repeat;
   background-color: #000;
   background-size: cover;
   background-position: center center;
@@ -149,10 +149,10 @@
 }
 .first .container .right .count {
   position: absolute;
-  top: -170px;
+  top: -160px;
   text-align: left;
   background: rgba(0,0,0,0.129);
-  padding: 1rem;
+  padding: 0.1rem;
 }
 .first .container .right .count h2 {
   color: #ffa500;
@@ -164,6 +164,70 @@
   color: #fff;
   font-size: 1.2rem;
   line-height: 1.4rem;
+}
+.first .container .right .count p .counter {
+  font-size: 2rem;
+  color: #ffa500;
+  animation-name: counter;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+@-moz-keyframes counter {
+  0% {
+    font-size: 1rem;
+    font-weight: 300;
+  }
+  50% {
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+  100% {
+    font-size: 1rem;
+    font-weight: 300;
+  }
+}
+@-webkit-keyframes counter {
+  0% {
+    font-size: 1rem;
+    font-weight: 300;
+  }
+  50% {
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+  100% {
+    font-size: 1rem;
+    font-weight: 300;
+  }
+}
+@-o-keyframes counter {
+  0% {
+    font-size: 1rem;
+    font-weight: 300;
+  }
+  50% {
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+  100% {
+    font-size: 1rem;
+    font-weight: 300;
+  }
+}
+@keyframes counter {
+  0% {
+    font-size: 1rem;
+    font-weight: 300;
+  }
+  50% {
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+  100% {
+    font-size: 1rem;
+    font-weight: 300;
+  }
 }
 .first .container .right .form-wrap {
   width: 380px;
@@ -201,6 +265,7 @@
   color: #fff;
   text-transform: uppercase;
   font-size: 1.5rem;
+  box-shadow: 0px -2px 16px 1px rgba(0,0,0,0.75);
 }
 .second {
   width: 100%;
