--- a/style.styl
+++ b/style.styl
@@ -32,7 +32,7 @@
             .link-active
                 border-bottom: 1px solid white
 .first
-    background: url(../img/bg.gif) no-repeat
+    background: url(../img/bg1.jpg) no-repeat
     background-color: #000000
     background-size: cover
     background-position: center center
@@ -127,10 +127,10 @@
             margin-left: 1rem
             .count
                 position: absolute
-                top: -170px
+                top: -160px
                 text-align: left
                 background: #00000021
-                padding: 1rem;
+                padding: 0.1rem;
                 h2
                  color: orange
                  font-size: 2rem
@@ -140,6 +140,17 @@
                  color: #fff
                  font-size: 1.2rem
                  line-height: 1.4rem
+                 .counter
+                     font-size: 2rem
+                     color: orange
+                     animation-name: counter
+                     animation-duration: 1s;
+                     animation-timing-function: linear;
+                     animation-iteration-count: infinite;
+                     @keyframes counter
+                         0% {font-size: 1rem;font-weight: 300;}
+                         50% {font-size: 1.2rem;font-weight: 500;}
+                         100% {font-size: 1rem;font-weight: 300;}
             .form-wrap
                 width: 380px
                 height: 445px
@@ -172,6 +183,7 @@
                         color: #ffffff
                         text-transform: uppercase
                         font-size: 1.5rem
+                        box-shadow: 0px -2px 16px 1px rgba(0,0,0,0.75)
 .second
     width: 100%
     height: 100vh
