--- a/index.pug
+++ b/index.pug
@@ -39,7 +39,9 @@ html(lang="en")
                             i(class="fas fa-angle-double-left")
                 .right
                     .count
-                        h2 warning!
+                        h2
+                            i(class="fas fa-exclamation-triangle")
+                            |	&nbsp;warning!
                         p Due to extremely high media demand, we will close registration as of
                         p
                             span.data
@@ -54,6 +56,8 @@ html(lang="en")
                                 input(type="text", placeholder="Last name")
                             .input-wrap
                                 input(type="emeil",placeholder="Emeil")
-                            button give me access now
+                            button 
+                                i(class="fas fa-sign-in-alt")
+                                |&nbsp;give me access now
 
         section.second
