--- a/style.styl
+++ b/style.styl
@@ -43,6 +43,7 @@
         display: flex
         align-items: center
         height: 100%
+        overflow hidden
         .left
             position: relative
             display: flex
@@ -110,8 +111,7 @@
                         @keyframes button2
                             0%{background-position: right;}
                             95%{background-position: right;}                            
-                            100%{background-position: left;}
-                            
+                            100%{background-position: left;}                       
                 .arrow
                     z-index 10
                     color: #ffffff
@@ -126,6 +126,8 @@
                         0%   {left:150px}
                         50%   {left:170px}
                         100% {left: 150px}
+        @media (max-width: 1200px)
+            flex-direction: column    
         .right
             position relative
             display: flex
@@ -193,7 +195,7 @@
                         position: absolute
                         bottom: -30px
                         margin-top:10px
-                        padding: 1rem 4rem
+                        padding: 1rem 2rem
                         background: orange
                         border: none
                         border-radius: 5px
