--- a/index.pug
+++ b/index.pug
@@ -29,6 +29,7 @@ html(lang="en")
                     .menu-link footer
         section.first
             .container
+                .people-wrap
                 .left
                     .laptop
                         img(src="img/laptop.png", alt="")
