--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   width: 100%;
   padding: 1rem;
   z-index: 12;
+  transition: 1s;
 }
 .nav-bar .container {
   display: flex;
@@ -18,6 +19,7 @@
 }
 .nav-bar .container .logo img {
   height: 60px;
+  transition: 1s;
 }
 .nav-bar .container nav {
   display: flex;
@@ -47,10 +49,43 @@
   transition: 1s all;
 }
 .first .container {
+  position: relative;
   display: flex;
   align-items: center;
   height: 100%;
   overflow: hidden;
+}
+.first .container .people-wrap {
+  position: absolute;
+  top: 100px;
+  left: 70px;
+  right: 0;
+  width: 100%;
+  max-width: 640px;
+  max-height: 300px;
+  overflow: hidden;
+}
+.first .container .people-wrap .people {
+  max-width: 320px;
+  width: 100%;
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgba(0,0,0,0.565);
+  overflow: hidden;
+}
+.first .container .people-wrap .people .people-photo {
+  border-radius: 50%;
+  overflow: hidden;
+}
+.first .container .people-wrap .people .people-name {
+  color: #fff;
+  padding: 0 1rem;
+}
+.first .container .people-wrap .people .people-profit {
+  color: #ffa500;
+  padding: 0 1rem;
 }
 .first .container .left {
   position: relative;
