--- a/style.styl
+++ b/style.styl
@@ -10,6 +10,7 @@
     width: 100%
     padding: 1rem
     z-index: 12
+    transition: 1s
     .container
         display: flex
         justify-content: space-between
@@ -17,6 +18,7 @@
         .logo
             img
                 height: 60px
+                transition: 1s
         nav
             display: flex
             align-items: center
@@ -41,10 +43,38 @@
     height 100vh
     transition: 1s all
     .container
+        position relative
         display: flex
         align-items: center
         height: 100%
         overflow hidden
+        .people-wrap
+            position: absolute
+            top: 100px
+            left: 70px
+            right 0
+            width: 100%
+            max-width: 640px
+            max-height: 300px
+            overflow hidden
+            .people
+                max-width 320px
+                width: 100%
+                margin: 10px 0
+                display: flex
+                justify-content: space-between
+                align-items: center
+                background: #00000090
+                overflow hidden
+                .people-photo
+                    border-radius: 50%
+                    overflow hidden
+                .people-name
+                    color: white
+                    padding: 0 1rem
+                .people-profit
+                    color: orange
+                    padding: 0 1rem
         .left
             position: relative
             display: flex
