--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@
   overflow: hidden;
 }
 .first .container .people-wrap .people {
+  border-radius: 30px;
   max-width: 320px;
   width: 100%;
   margin: 10px 0;
