--- a/style.styl
+++ b/style.styl
@@ -58,6 +58,7 @@
             max-height: 300px
             overflow hidden
             .people
+                border-radius: 30px
                 max-width 320px
                 width: 100%
                 margin: 10px 0
