--- a/style.styl
+++ b/style.styl
@@ -40,8 +40,9 @@
     background-size: cover
     background-position: center center
     width: 100%
-    height 100vh
+    height 1200px
     transition: 1s all
+    padding-top: 100px
     .container
         position relative
         display: flex
@@ -52,7 +53,7 @@
             position: relative
             display: flex
             flex-direction: column
-            justify-content: center
+            justify-content: flex-start
             align-items: center
             width: 700px
             height: 100%
@@ -70,6 +71,7 @@
                 img
                     width: 100%
                     position: absolute
+                    top: 0
                 h2
                     width: 70%
                     max-width: 720px
@@ -134,34 +136,6 @@
                         100% {left: 150px}
         @media (max-width: 1200px)
             flex-direction: column    
-        .people-wrap
-            position: absolute
-            bottom: 0
-            left: 70px
-            right 0
-            width: 100%
-            max-width: 640px
-            height: 200px
-            overflow hidden
-            .people
-                border-radius: 30px
-                max-width 320px
-                width: 100%
-                margin: 10px 0
-                display: flex
-                justify-content: space-between
-                align-items: center
-                background: #00000090
-                overflow hidden
-                .people-photo
-                    border-radius: 50%
-                    overflow hidden
-                .people-name
-                    color: white
-                    padding: 0 1rem
-                .people-profit
-                    color: orange
-                    padding: 0 1rem
         .right
             position relative
             display: flex
@@ -237,6 +211,32 @@
                         text-transform: uppercase
                         font-size: 1.5rem
                         box-shadow: 0px -2px 16px 1px rgba(0,0,0,0.75)
+.people-wrap
+    padding-top: 50px
+    width: 100%
+    max-width: 4000px
+    height: 350px
+    overflow hidden
+    .people
+        border-radius: 30px
+        width: 380px
+        margin: 10px 0
+        display: flex
+        justify-content: space-between
+        align-items: center
+        background: #00000090
+        overflow hidden
+        .people-photo
+            border-radius: 50%
+            overflow hidden
+        .people-name
+            color: white
+            padding: 0 1rem
+        .people-profit
+            color: orange
+            padding: 0 1rem
+        &:last-child
+            opacity 0
 .second
     width: 100%
     height: 100vh
