--- a/index.pug
+++ b/index.pug
@@ -38,15 +38,6 @@ html(lang="en")
                         .arrow
                             i(class="fas fa-angle-double-left")
                 .right
-                    .count
-                        h2
-                            i(class="fas fa-exclamation-triangle")
-                            |	&nbsp;warning!
-                        p Due to extremely high media demand, we will close registration as of
-                        p
-                            span.data
-                            |  -HURRY!
-                            span.counter
                     .form-wrap
                         h2 CHANGE YOUR LIFE TODAY!
                         form(action="")
@@ -59,7 +50,14 @@ html(lang="en")
                             button 
                                 i(class="fas fa-sign-in-alt")
                                 |&nbsp;give me access now
-                        .people-wrap
-                    
-
+            .count
+                h2
+                    i(class="fas fa-exclamation-triangle")
+                    |	&nbsp;warning!
+                p Due to extremely high media demand, we will close registration as of
+                p
+                    span.data
+                    |  -HURRY!
+                    span.counter
+        //- .people-wrap
         section.second
