--- a/style.styl
+++ b/style.styl
@@ -35,18 +35,48 @@
             .link-active
                 border-bottom: 1px solid white
 .first
+    position relative
     background: url(../img/bg1.jpg) no-repeat
     background-color: #000000
     background-size: cover
     background-position: center center
     width: 100%
-    height 1200px
+    height 100%
     transition: 1s all
     padding-top: 100px
+    padding-bottom: 100px
+    .count
+        background: #012948c7
+        position: fixed
+        top: 100px
+        right 20px
+        margin: 0 auto
+        width: 320px
+        text-align: left
+        padding: 1rem
+        h2
+            color: orange
+            font-size: 2rem
+            text-transform: uppercase
+            line-height: 2rem;
+        p
+            color: #fff
+            font-size: 1.2rem
+            line-height: 1.4rem
+            .counter
+                font-size: 2rem
+                color: orange
+                animation-name: counter
+                animation-duration: 1s;
+                animation-timing-function: linear;
+                animation-iteration-count: infinite;
+                @keyframes counter
+                    0% {font-size: 1rem;font-weight: 300;}
+                    50% {font-size: 1.2rem;font-weight: 500;}
+                    100% {font-size: 1rem;font-weight: 300;}
     .container
         position relative
         display: flex
-        align-items: center
         height: 100%
         overflow hidden
         .left
@@ -139,37 +169,12 @@
         .right
             position relative
             display: flex
+            flex-direction: column
             align-items: center
-            justify-content: center;
+            justify-content: flex-start
             width: 100%
             margin-left: 1rem
             transition: 1s
-            .count
-                width: 380px
-                position: absolute
-                top: -160px
-                text-align: left
-                padding: 0.1rem;
-                h2
-                 color: orange
-                 font-size: 2rem
-                 text-transform: uppercase
-                 line-height: 2rem;
-                p
-                 color: #fff
-                 font-size: 1.2rem
-                 line-height: 1.4rem
-                 .counter
-                     font-size: 2rem
-                     color: orange
-                     animation-name: counter
-                     animation-duration: 1s;
-                     animation-timing-function: linear;
-                     animation-iteration-count: infinite;
-                     @keyframes counter
-                         0% {font-size: 1rem;font-weight: 300;}
-                         50% {font-size: 1.2rem;font-weight: 500;}
-                         100% {font-size: 1rem;font-weight: 300;}
             .form-wrap
                 width: 380px
                 height: 100%
@@ -185,7 +190,6 @@
                     background: #ffffff
                     background-size: cover
                     width: 100%
-                    height 100%
                     padding: 1rem
                     display: flex
                     flex-direction: column
@@ -212,6 +216,8 @@
                         font-size: 1.5rem
                         box-shadow: 0px -2px 16px 1px rgba(0,0,0,0.75)
 .people-wrap
+    position: absolute
+    top: 100px
     padding-top: 50px
     width: 100%
     max-width: 4000px
