--- a/index.pug
+++ b/index.pug
@@ -59,5 +59,20 @@ html(lang="en")
                     span.data
                     |  -HURRY!
                     span.counter
+            .container.secure-wrap
+                .secure
+                    .block
+                        img(src="img/bitgo.png", alt="")
+                    .block
+                        img(src="img/norton.png", alt="")
+                    .block
+                        img(src="img/secure-trading.png", alt="")
+                    .block
+                        img(src="img/mcafee.png", alt="")
+                .bidask
+                    .block
+                        span Bid 3864.00$
+                    .block
+                        span Ask 3861.70$
         //- .people-wrap
         section.second
