--- a/style.styl
+++ b/style.styl
@@ -13,7 +13,7 @@
     transition: 1s
     .container
         display: flex
-        justify-content: space-between
+        justify-content: flex-start
         align-items: center
         .logo
             img
@@ -49,11 +49,12 @@
         background: #012948c7
         position: fixed
         top: 100px
-        right 20px
+        right 0
         margin: 0 auto
         width: 320px
         text-align: left
         padding: 1rem
+        z-index 13
         h2
             color: orange
             font-size: 2rem
@@ -215,6 +216,27 @@
                         text-transform: uppercase
                         font-size: 1.5rem
                         box-shadow: 0px -2px 16px 1px rgba(0,0,0,0.75)
+    .secure-wrap
+        display: flex
+        justify-content: space-around
+        padding: 1rem 0
+        .secure
+            display: flex
+            justify-content: center
+            align-items: center
+            padding: 1rem 1rem
+            .block
+                margin: 1rem
+                img 
+                    height: 40px
+        .bidask
+            display: flex
+            justify-content: center
+            align-items: center
+            span 
+                padding: 0 1rem
+                color: orange
+                font-size: 1.5rem
 .people-wrap
     position: absolute
     top: 100px
