--- a/index.pug
+++ b/index.pug
@@ -9,6 +9,7 @@ html(lang="en")
         link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
         link(rel="stylesheet", href="css/style.css")
         script(src="https://code.jquery.com/jquery-3.3.1.min.js", defer)
+        script(src="js/simpleParallax.min.js")
         script(src="js/main.js", defer)
     body
         .loader
@@ -76,3 +77,16 @@ html(lang="en")
                         span Ask 3861.70$
         //- .people-wrap
         section.second
+            img(src="img/bg3.jpg", alt="" class="thumbnail")
+            .container
+                h2 Join Us and Start Getting Rich 
+                    | with Bitcoin Revolution!
+                p The Bitcoin Revolution is a group 
+                    |reserved exclusively to people who 
+                    |jumped on the insane returns that 
+                    |Bitcoin offers and have quietly amassed 
+                    |a fortune in doing so. Our members enjoy 
+                    |retreats around the world every month while 
+                    |they make money on their laptop with just a 
+                    |few minutes of “work” every day.
+        section.third
