--- a/style.styl
+++ b/style.styl
@@ -18,7 +18,7 @@
         .logo
             img
                 height: 60px
-                transition: 1s
+                transition: 0.5s
         nav
             display: flex
             align-items: center
@@ -51,7 +51,7 @@
         top: 100px
         right 0
         margin: 0 auto
-        width: 320px
+        width: 340px
         text-align: left
         padding: 1rem
         z-index 13
@@ -266,6 +266,36 @@
         &:last-child
             opacity 0
 .second
+    width: 100%
+    height: 500px
+    overflow hidden
+    position: relative
+    box-shadow: inset 0px 24px 50px -13px #000000;
+    img
+        width: 100%
+        position: absolute
+        top: -100px
+        filter: blur(10px)
+        z-index -1
+    .container
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: flex-start
+        text-align: left
+        height: 100%
+        h2
+            font-size: 4rem
+            max-width: 760px
+            font-weight: 700
+            color: #fff
+            text-shadow: 0px 0px 17px #000000
+            padding: 1rem 0
+        p 
+            max-width 760px
+            font-size: 1.1rem
+            color: #fff
+.third
     width: 100%
     height: 100vh
 .loader
