--- a/style.styl
+++ b/style.styl
@@ -296,6 +296,7 @@
             font-size: 1.1rem
             color: #fff
 .third
+    background: #000000d6
     width: 100%
     height: 100vh
 .loader
